<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/direct_reply_notification_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/fire_direct_reply_notification"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/bundled_inbox_style_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/direct_reply_notification_button"
        android:layout_marginTop="8dp"
        android:text="@string/fire_bundled_inbox_notifications"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/big_text_style_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bundled_inbox_style_button"
        android:layout_marginTop="8dp"
        android:text="@string/fire_big_text_style_notification"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/big_picture_style_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/big_text_style_button"
        android:layout_marginTop="8dp"
        android:text="@string/fire_big_picture_style_notification"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/determinate_progress_bar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/big_picture_style_button"
        android:layout_marginTop="8dp"
        android:text="@string/fire_determinate_progress_bar_notification"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/indeterminate_progress_bar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/determinate_progress_bar_button"
        android:layout_marginTop="8dp"
        android:text="@string/fire_indeterminate_progress_bar_notification"
        android:textAllCaps="false"/>

    <ImageView
        android:id="@+id/wt_attribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/attribution"
        android:src="@drawable/wt_attribution"/>

</RelativeLayout>
